--- a/css/githubmapping.css
+++ b/css/githubmapping.css
@@ -3,6 +3,7 @@ html, body,  #map {
   height : 100%;
   padding: 0px;
   margin: 0px;
+  font-family: 'Pavanam', sans-serif !important;
 }
 .icons {
     vertical-align: middle;
@@ -18,6 +19,19 @@ html, body,  #map {
   border: 1px solid black;
   padding: 20px;
   margin-bottom: 35px !important;
+}
+
+#loading {
+  text-align: center;
+  background-color: rgba(239, 239, 239, 0.95);
+  padding-top: 40%;
+  display: inline;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1000000;
 }
 
 #footer {
