--- a/css/githubmapping.css
+++ b/css/githubmapping.css
@@ -4,8 +4,13 @@ html, body,  #map {
   padding: 0px;
   margin: 0px;
   font-family: 'Pavanam', Arial, sans-serif !important;
-  font-size: 14px;
+  font-size: 16px;
 }
+
+h1 {
+  font-size: 56px;
+}
+
 .icons {
     vertical-align: middle;
     text-align: center;
@@ -69,7 +74,7 @@ html, body,  #map {
   font-weight: bold;
   height: 3em;
   width: 20%;
-  min-width: 6em;
+  min-width: 8em;
   border-bottom-left-radius: 3px;
   background-color: rgba(239, 239, 239, 0.90);
   outline: none;
